--- a/barista/src/index.scss
+++ b/barista/src/index.scss
@@ -4,10 +4,10 @@ body, h1, h2, h3, ul, li {
     padding: 0;
   }
   
-  /* Apply some global styles */
+
   body {
     font-family: Arial, sans-serif;
-    background-color: #f7f7f7; /* Set your desired background color */
-    color: #333; /* Set your desired text color */
+    background-color: #f7f7f7;
+    color: #333;
   }
   
